@@ -1,10 +1,12 @@
 package org.openmetadata.service.search;
 
+import static org.openmetadata.common.utils.CommonUtil.listOrEmpty;
 import static org.openmetadata.common.utils.CommonUtil.nullOrEmpty;
+import static org.openmetadata.search.IndexMapping.INDEX_NAME_SEPARATOR;
 import static org.openmetadata.service.Entity.AGGREGATED_COST_ANALYSIS_REPORT_DATA;
 import static org.openmetadata.service.Entity.ENTITY_REPORT_DATA;
 import static org.openmetadata.service.Entity.FIELD_DISPLAY_NAME;
-import static org.openmetadata.service.Entity.FIELD_DOMAIN;
+import static org.openmetadata.service.Entity.FIELD_DOMAINS;
 import static org.openmetadata.service.Entity.FIELD_FOLLOWERS;
 import static org.openmetadata.service.Entity.FIELD_FULLY_QUALIFIED_NAME;
 import static org.openmetadata.service.Entity.FIELD_NAME;
@@ -14,6 +16,8 @@ import static org.openmetadata.service.Entity.QUERY;
 import static org.openmetadata.service.Entity.RAW_COST_ANALYSIS_REPORT_DATA;
 import static org.openmetadata.service.Entity.WEB_ANALYTIC_ENTITY_VIEW_REPORT_DATA;
 import static org.openmetadata.service.Entity.WEB_ANALYTIC_USER_ACTIVITY_REPORT_DATA;
+import static org.openmetadata.service.search.SearchClient.ADD_DOMAINS_SCRIPT;
+import static org.openmetadata.service.search.SearchClient.ADD_FOLLOWERS_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.ADD_OWNERS_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.DATA_ASSET_SEARCH_ALIAS;
 import static org.openmetadata.service.search.SearchClient.DEFAULT_UPDATE_SCRIPT;
@@ -24,7 +28,9 @@ import static org.openmetadata.service.search.SearchClient.PROPAGATE_NESTED_FIEL
 import static org.openmetadata.service.search.SearchClient.PROPAGATE_TEST_SUITES_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.REMOVE_DATA_PRODUCTS_CHILDREN_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.REMOVE_DOMAINS_CHILDREN_SCRIPT;
+import static org.openmetadata.service.search.SearchClient.REMOVE_DOMAINS_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.REMOVE_ENTITY_RELATIONSHIP;
+import static org.openmetadata.service.search.SearchClient.REMOVE_FOLLOWERS_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.REMOVE_OWNERS_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.REMOVE_PROPAGATED_ENTITY_REFERENCE_FIELD_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.REMOVE_PROPAGATED_FIELD_SCRIPT;
@@ -35,24 +41,28 @@ import static org.openmetadata.service.search.SearchClient.UPDATE_ADDED_DELETE_G
 import static org.openmetadata.service.search.SearchClient.UPDATE_CERTIFICATION_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.UPDATE_PROPAGATED_ENTITY_REFERENCE_FIELD_SCRIPT;
 import static org.openmetadata.service.search.SearchClient.UPDATE_TAGS_FIELD_SCRIPT;
+import static org.openmetadata.service.search.SearchConstants.DOMAINS_ID;
 import static org.openmetadata.service.search.SearchConstants.ENTITY_TYPE;
 import static org.openmetadata.service.search.SearchConstants.FAILED_TO_CREATE_INDEX_MESSAGE;
 import static org.openmetadata.service.search.SearchConstants.FULLY_QUALIFIED_NAME;
 import static org.openmetadata.service.search.SearchConstants.HITS;
 import static org.openmetadata.service.search.SearchConstants.ID;
 import static org.openmetadata.service.search.SearchConstants.PARENT;
+import static org.openmetadata.service.search.SearchConstants.PARENT_ID;
 import static org.openmetadata.service.search.SearchConstants.SEARCH_SOURCE;
 import static org.openmetadata.service.search.SearchConstants.SERVICE_ID;
 import static org.openmetadata.service.search.SearchConstants.TAGS_FQN;
 import static org.openmetadata.service.search.SearchConstants.TEST_SUITES;
 import static org.openmetadata.service.search.SearchUtils.isConnectedVia;
-import static org.openmetadata.service.search.models.IndexMapping.INDEX_NAME_SEPARATOR;
 import static org.openmetadata.service.util.EntityUtil.compareEntityReferenceById;
 import static org.openmetadata.service.util.EntityUtil.isNullOrEmptyChangeDescription;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.ArrayNode;
+import io.micrometer.core.instrument.Metrics;
+import io.micrometer.core.instrument.Tags;
+import io.micrometer.core.instrument.Timer;
 import jakarta.json.JsonObject;
 import jakarta.ws.rs.core.Response;
 import java.io.IOException;
@@ -75,18 +85,23 @@ import java.util.stream.Stream;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang.exception.ExceptionUtils;
+import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.apache.commons.lang3.tuple.ImmutablePair;
 import org.apache.commons.lang3.tuple.Pair;
 import org.openmetadata.schema.EntityInterface;
 import org.openmetadata.schema.EntityTimeSeriesInterface;
 import org.openmetadata.schema.analytics.ReportData;
+import org.openmetadata.schema.api.entityRelationship.SearchEntityRelationshipRequest;
+import org.openmetadata.schema.api.entityRelationship.SearchEntityRelationshipResult;
+import org.openmetadata.schema.api.lineage.EntityCountLineageRequest;
+import org.openmetadata.schema.api.lineage.LineagePaginationInfo;
 import org.openmetadata.schema.api.lineage.SearchLineageRequest;
 import org.openmetadata.schema.api.lineage.SearchLineageResult;
 import org.openmetadata.schema.api.search.SearchSettings;
 import org.openmetadata.schema.dataInsight.DataInsightChartResult;
 import org.openmetadata.schema.entity.classification.Tag;
 import org.openmetadata.schema.entity.data.QueryCostSearchResult;
+import org.openmetadata.schema.exception.JsonParsingException;
 import org.openmetadata.schema.search.AggregationRequest;
 import org.openmetadata.schema.search.SearchRequest;
 import org.openmetadata.schema.service.configuration.elasticsearch.ElasticSearchConfiguration;
@@ -99,19 +114,25 @@ import org.openmetadata.schema.type.EntityReference;
 import org.openmetadata.schema.type.FieldChange;
 import org.openmetadata.schema.type.TagLabel;
 import org.openmetadata.schema.type.UsageDetails;
+import org.openmetadata.schema.utils.JsonUtils;
+import org.openmetadata.search.IndexMapping;
+import org.openmetadata.search.IndexMappingLoader;
 import org.openmetadata.service.Entity;
-import org.openmetadata.service.exception.UnhandledServerException;
+import org.openmetadata.service.apps.bundles.searchIndex.BulkSink;
+import org.openmetadata.service.apps.bundles.searchIndex.ElasticSearchBulkSink;
+import org.openmetadata.service.apps.bundles.searchIndex.OpenSearchBulkSink;
+import org.openmetadata.service.events.lifecycle.EntityLifecycleEventDispatcher;
+import org.openmetadata.service.events.lifecycle.handlers.SearchIndexHandler;
 import org.openmetadata.service.jdbi3.EntityRepository;
+import org.openmetadata.service.monitoring.RequestLatencyContext;
 import org.openmetadata.service.search.elasticsearch.ElasticSearchClient;
 import org.openmetadata.service.search.indexes.SearchIndex;
-import org.openmetadata.service.search.models.IndexMapping;
 import org.openmetadata.service.search.nlq.NLQService;
 import org.openmetadata.service.search.nlq.NLQServiceFactory;
 import org.openmetadata.service.search.opensearch.OpenSearchClient;
 import org.openmetadata.service.security.policyevaluator.SubjectContext;
 import org.openmetadata.service.util.EntityUtil;
 import org.openmetadata.service.util.FullyQualifiedName;
-import org.openmetadata.service.util.JsonUtils;
 import org.openmetadata.service.workflows.searchIndex.ReindexingUtil;
 
 @Slf4j
@@ -125,16 +146,31 @@ public class SearchRepository {
 
   @Getter @Setter public SearchIndexFactory searchIndexFactory = new SearchIndexFactory();
 
+  private static final Set<String> SERVICE_ENTITY_SET =
+      Set.of(
+          Entity.DATABASE_SERVICE,
+          Entity.DASHBOARD_SERVICE,
+          Entity.MESSAGING_SERVICE,
+          Entity.PIPELINE_SERVICE,
+          Entity.MLMODEL_SERVICE,
+          Entity.STORAGE_SERVICE,
+          Entity.SEARCH_SERVICE,
+          Entity.SECURITY_SERVICE,
+          Entity.API_SERVICE,
+          Entity.DRIVE_SERVICE);
+
   private final List<String> inheritableFields =
       List.of(
           FIELD_OWNERS,
-          FIELD_DOMAIN,
+          FIELD_DOMAINS,
+          FIELD_FOLLOWERS,
           Entity.FIELD_DISABLED,
           Entity.FIELD_TEST_SUITES,
           FIELD_DISPLAY_NAME);
   private final List<String> propagateFields = List.of(Entity.FIELD_TAGS);
 
-  @Getter private final ElasticSearchConfiguration elasticSearchConfiguration;
+  @Getter private final ElasticSearchConfiguration searchConfiguration;
+  @Getter private final int maxDBConnections;
 
   @Getter private final String clusterAlias;
 
@@ -151,23 +187,39 @@ public class SearchRepository {
 
   protected NLQService nlqService;
 
-  public SearchRepository(ElasticSearchConfiguration config) {
-    elasticSearchConfiguration = config;
-    searchClient = buildSearchClient(config);
+  public SearchRepository(ElasticSearchConfiguration config, int maxDBConnections) {
+    this.maxDBConnections = maxDBConnections;
+    searchConfiguration = config;
+    searchClient = buildSearchClient(searchConfiguration);
     searchIndexFactory = buildIndexFactory();
     language =
-        config != null && config.getSearchIndexMappingLanguage() != null
-            ? config.getSearchIndexMappingLanguage().value()
+        searchConfiguration != null && searchConfiguration.getSearchIndexMappingLanguage() != null
+            ? searchConfiguration.getSearchIndexMappingLanguage().value()
             : "en";
-    clusterAlias = config != null ? config.getClusterAlias() : "";
+    clusterAlias = searchConfiguration != null ? searchConfiguration.getClusterAlias() : "";
     loadIndexMappings();
+    registerSearchIndexHandler();
+  }
+
+  /**
+   * Register the SearchIndexHandler as the primary handler for search indexing operations.
+   * This handler will handle the actual search indexing when entities are created/updated/deleted.
+   */
+  private void registerSearchIndexHandler() {
+    try {
+      SearchIndexHandler searchHandler = new SearchIndexHandler(this);
+      EntityLifecycleEventDispatcher.getInstance().registerHandler(searchHandler);
+      LOG.info("Successfully registered SearchIndexHandler for entity lifecycle events");
+    } catch (Exception e) {
+      LOG.error("Failed to register SearchIndexHandler", e);
+    }
   }
 
   public SearchClient getSearchClient() {
     if (searchClient == null) {
       synchronized (SearchRepository.class) {
         if (searchClient == null) {
-          searchClient = buildSearchClient(elasticSearchConfiguration);
+          searchClient = buildSearchClient(searchConfiguration);
         }
       }
     }
@@ -175,32 +227,8 @@ public class SearchRepository {
   }
 
   private void loadIndexMappings() {
-    Set<String> entities;
-    entityIndexMap = new HashMap<>();
-    try (InputStream in = getClass().getResourceAsStream("/elasticsearch/indexMapping.json")) {
-      assert in != null;
-      JsonObject jsonPayload = JsonUtils.readJson(new String(in.readAllBytes())).asJsonObject();
-      entities = jsonPayload.keySet();
-      for (String s : entities) {
-        entityIndexMap.put(
-            s, JsonUtils.readValue(jsonPayload.get(s).toString(), IndexMapping.class));
-      }
-    } catch (Exception e) {
-      throw new UnhandledServerException("Failed to load indexMapping.json", e);
-    }
-    try (InputStream in2 =
-        getClass().getResourceAsStream("/elasticsearch/collate/indexMapping.json")) {
-      if (in2 != null) {
-        JsonObject jsonPayload = JsonUtils.readJson(new String(in2.readAllBytes())).asJsonObject();
-        entities = jsonPayload.keySet();
-        for (String s : entities) {
-          entityIndexMap.put(
-              s, JsonUtils.readValue(jsonPayload.get(s).toString(), IndexMapping.class));
-        }
-      }
-    } catch (Exception e) {
-      LOG.warn("Failed to load indexMapping.json");
-    }
+    IndexMappingLoader mappingLoader = IndexMappingLoader.getInstance();
+    entityIndexMap = mappingLoader.getIndexMapping();
   }
 
   public SearchClient buildSearchClient(ElasticSearchConfiguration config) {
@@ -227,8 +255,37 @@ public class SearchRepository {
   }
 
   public void createIndexes() {
-    for (IndexMapping indexMapping : entityIndexMap.values()) {
-      createIndex(indexMapping);
+    RecreateIndexHandler recreateIndexHandler = this.createReindexHandler();
+    ReindexContext context = recreateIndexHandler.reCreateIndexes(entityIndexMap.keySet());
+    if (context != null) {
+      for (String entityType : context.getEntities()) {
+        try {
+          String originalIndex = context.getOriginalIndex(entityType).orElse(null);
+          String canonicalIndex = context.getCanonicalIndex(entityType).orElse(null);
+          String activeIndex = context.getOriginalIndex(entityType).orElse(null);
+          String stagedIndex = context.getStagedIndex(entityType).orElse(null);
+          String canonicalAlias = context.getCanonicalAlias(entityType).orElse(null);
+          Set<String> existingAliases = context.getExistingAliases(entityType);
+          Set<String> parentAliases =
+              new HashSet<>(listOrEmpty(context.getParentAliases(entityType)));
+
+          EntityReindexContext entityReindexContext =
+              EntityReindexContext.builder()
+                  .entityType(entityType)
+                  .originalIndex(originalIndex)
+                  .canonicalIndex(canonicalIndex)
+                  .activeIndex(activeIndex)
+                  .stagedIndex(stagedIndex)
+                  .canonicalAliases(canonicalAlias)
+                  .existingAliases(existingAliases)
+                  .parentAliases(parentAliases)
+                  .build();
+          recreateIndexHandler.finalizeReindex(entityReindexContext, true);
+
+        } catch (Exception ex) {
+          LOG.error("Failed to recreate index for entity {}", entityType, ex);
+        }
+      }
     }
   }
 
@@ -236,6 +293,15 @@ public class SearchRepository {
     for (IndexMapping indexMapping : entityIndexMap.values()) {
       updateIndex(indexMapping);
     }
+  }
+
+  /**
+   * Hook method called before reindexing starts, after ApplicationContext is initialized.
+   * Subclasses can override this to perform additional initialization that depends on ApplicationContext.
+   */
+  public void prepareForReindex() {
+    // Default implementation does nothing
+    // Sub-classes like SearchRepositoryExt can override to initialize vector services
   }
 
   public IndexMapping getIndexMapping(String entityType) {
@@ -261,12 +327,24 @@ public class SearchRepository {
   }
 
   public boolean indexExists(IndexMapping indexMapping) {
-    return searchClient.indexExists(indexMapping.getIndexName(clusterAlias));
+    String indexName = indexMapping.getIndexName(clusterAlias);
+    if (searchClient.indexExists(indexName)) {
+      return true;
+    }
+    return !searchClient.getIndicesByAlias(indexName).isEmpty();
   }
 
   public void createIndex(IndexMapping indexMapping) {
     try {
+      String indexName = indexMapping.getIndexName(clusterAlias);
       if (!indexExists(indexMapping)) {
+        // Clean up any lingering alias with the same name
+        Set<String> aliasTargets = searchClient.getIndicesByAlias(indexName);
+        for (String target : aliasTargets) {
+          searchClient.removeAliases(target, Set.of(indexName));
+          searchClient.deleteIndex(target);
+        }
+
         String indexMappingContent = getIndexMapping(indexMapping);
         searchClient.createIndex(indexMapping, indexMappingContent);
         searchClient.createAliases(indexMapping);
@@ -295,8 +373,15 @@ public class SearchRepository {
 
   public void deleteIndex(IndexMapping indexMapping) {
     try {
-      if (indexExists(indexMapping)) {
+      String indexName = indexMapping.getIndexName(clusterAlias);
+      if (searchClient.indexExists(indexName)) {
         searchClient.deleteIndex(indexMapping);
+      } else {
+        Set<String> aliasTargets = searchClient.getIndicesByAlias(indexName);
+        for (String target : aliasTargets) {
+          searchClient.removeAliases(target, Set.of(indexName));
+          searchClient.deleteIndex(target);
+        }
       }
     } catch (Exception e) {
       LOG.error(
@@ -320,31 +405,52 @@ public class SearchRepository {
     return null;
   }
 
-  public void createEntity(EntityInterface entity) {
-    if (entity != null) {
-      String entityId = entity.getId().toString();
-      String entityType = entity.getEntityReference().getType();
-      try {
-        IndexMapping indexMapping = entityIndexMap.get(entityType);
-        SearchIndex index = searchIndexFactory.buildIndex(entityType, entity);
-        String doc = JsonUtils.pojoToJson(index.buildSearchIndexDoc());
-        searchClient.createEntity(indexMapping.getIndexName(clusterAlias), entityId, doc);
-      } catch (Exception ie) {
-        LOG.error(
-            "Issue in Creating new search document for entity [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
-            entityId,
-            entityType,
-            ie.getMessage(),
-            ie.getCause(),
-            ExceptionUtils.getStackTrace(ie));
-      }
+  public String readIndexMapping(IndexMapping indexMapping) {
+    return getIndexMapping(indexMapping);
+  }
+
+  /**
+   * Create search index for an entity only (no lifecycle events).
+   * This method is used by SearchIndexHandler.
+   */
+  public void createEntityIndex(EntityInterface entity) {
+    if (entity == null) {
+      LOG.warn("Entity is null, cannot create index.");
+      return;
+    }
+
+    if (!checkIfIndexingIsSupported(entity.getEntityReference().getType())) {
+      LOG.debug(
+          "Indexing is not supported for entity type: {}", entity.getEntityReference().getType());
+      return;
+    }
+
+    String entityId = entity.getId().toString();
+    String entityType = entity.getEntityReference().getType();
+    try {
+      IndexMapping indexMapping = entityIndexMap.get(entityType);
+      SearchIndex index = searchIndexFactory.buildIndex(entityType, entity);
+      String doc = JsonUtils.pojoToJson(index.buildSearchIndexDoc());
+      searchClient.createEntity(indexMapping.getIndexName(clusterAlias), entityId, doc);
+    } catch (Exception ie) {
+      LOG.error(
+          "Issue in Creating new search document for entity [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
+          entityId,
+          entityType,
+          ie.getMessage(),
+          ie.getCause(),
+          ExceptionUtils.getStackTrace(ie));
     }
   }
 
-  public void createEntities(List<EntityInterface> entities) {
+  /**
+   * Create search indexes for multiple entities only (no lifecycle events).
+   * This method is used by SearchIndexHandler.
+   */
+  public void createEntitiesIndex(List<EntityInterface> entities) {
     if (!nullOrEmpty(entities)) {
       // All entities in the list are of the same type
-      String entityType = entities.get(0).getEntityReference().getType();
+      String entityType = entities.getFirst().getEntityReference().getType();
       IndexMapping indexMapping = entityIndexMap.get(entityType);
       List<Map<String, String>> docs = new ArrayList<>();
       for (EntityInterface entity : entities) {
@@ -364,6 +470,16 @@ public class SearchRepository {
             ExceptionUtils.getStackTrace(ie));
       }
     }
+  }
+
+  /**
+   * Create search indexes for multiple entities and dispatch lifecycle events.
+   * This method maintains backward compatibility.
+   */
+  public void createEntities(List<EntityInterface> entities) {
+    // For backward compatibility, just call the index-only method
+    // EntityRepository now handles lifecycle event dispatching
+    createEntitiesIndex(entities);
   }
 
   public void createTimeSeriesEntity(EntityTimeSeriesInterface entity) {
@@ -416,48 +532,110 @@ public class SearchRepository {
     }
   }
 
-  public void updateEntity(EntityInterface entity) {
-    if (entity != null) {
-      String entityType = entity.getEntityReference().getType();
-      String entityId = entity.getId().toString();
-      try {
-        IndexMapping indexMapping = entityIndexMap.get(entityType);
-        String scriptTxt = DEFAULT_UPDATE_SCRIPT;
-        Map<String, Object> doc = new HashMap<>();
+  /**
+   * Update search index for an entity only (no lifecycle events).
+   * This method is used by SearchIndexHandler.
+   */
+  public void updateEntityIndex(EntityInterface entity) {
+    if (entity == null) {
+      LOG.warn("Entity is null, cannot update index.");
+      return;
+    }
 
-        ChangeDescription incrementalChangeDescription = entity.getIncrementalChangeDescription();
-        ChangeDescription changeDescription;
+    if (!checkIfIndexingIsSupported(entity.getEntityReference().getType())) {
+      LOG.debug(
+          "Indexing is not supported for entity type: {}", entity.getEntityReference().getType());
+      return;
+    }
 
-        if (!isNullOrEmptyChangeDescription(incrementalChangeDescription)) {
-          changeDescription = incrementalChangeDescription;
-        } else {
-          changeDescription = entity.getChangeDescription();
-        }
+    String entityType = entity.getEntityReference().getType();
+    String entityId = entity.getId().toString();
 
-        if (changeDescription != null
-            && entity.getChangeDescription() != null
-            && Objects.equals(
-                entity.getVersion(), entity.getChangeDescription().getPreviousVersion())) {
-          scriptTxt = getScriptWithParams(entity, doc, changeDescription);
-        } else {
-          SearchIndex elasticSearchIndex = searchIndexFactory.buildIndex(entityType, entity);
-          doc = elasticSearchIndex.buildSearchIndexDoc();
-        }
-        searchClient.updateEntity(
-            indexMapping.getIndexName(clusterAlias), entityId, doc, scriptTxt);
+    // Start timing search operation
+    Timer.Sample searchSample = RequestLatencyContext.startSearchOperation();
+    long startTime = System.currentTimeMillis();
+
+    try {
+      IndexMapping indexMapping = entityIndexMap.get(entityType);
+      String scriptTxt = DEFAULT_UPDATE_SCRIPT;
+      Map<String, Object> doc = new HashMap<>();
+
+      ChangeDescription incrementalChangeDescription = entity.getIncrementalChangeDescription();
+      ChangeDescription changeDescription;
+
+      if (!isNullOrEmptyChangeDescription(incrementalChangeDescription)) {
+        changeDescription = incrementalChangeDescription;
+      } else {
+        changeDescription = entity.getChangeDescription();
+      }
+
+      if (changeDescription != null
+          && entity.getChangeDescription() != null
+          && Objects.equals(
+              entity.getVersion(), entity.getChangeDescription().getPreviousVersion())) {
+        scriptTxt = getScriptWithParams(entity, doc, changeDescription);
+      } else {
+        SearchIndex elasticSearchIndex = searchIndexFactory.buildIndex(entityType, entity);
+        doc = elasticSearchIndex.buildSearchIndexDoc();
+      }
+
+      // Use synchronous update to ensure tests pass
+      // TODO: Consider using async updates with proper wait mechanisms in tests
+      searchClient.updateEntity(indexMapping.getIndexName(clusterAlias), entityId, doc, scriptTxt);
+
+      long updateTime = System.currentTimeMillis() - startTime;
+
+      // Only propagate if fields that affect children have changed
+      long propagateTime = 0;
+      if (requiresPropagation(changeDescription, entityType, entity)) {
+        // Time propagation operations
+        startTime = System.currentTimeMillis();
         propagateInheritedFieldsToChildren(
             entityType, entityId, changeDescription, indexMapping, entity);
         propagateGlossaryTags(entityType, entity.getFullyQualifiedName(), changeDescription);
         propagateCertificationTags(entityType, entity, changeDescription);
         propagateToRelatedEntities(entityType, changeDescription, indexMapping, entity);
-      } catch (Exception ie) {
-        LOG.error(
-            "Issue in Updating the search document for entity [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
+        propagateTime = System.currentTimeMillis() - startTime;
+
+        LOG.info(
+            "Search index update with propagation - entity: {}, type: {}, update: {}ms, propagate: {}ms, total: {}ms",
             entityId,
             entityType,
-            ie.getMessage(),
-            ie.getCause(),
-            ExceptionUtils.getStackTrace(ie));
+            updateTime,
+            propagateTime,
+            updateTime + propagateTime);
+      } else {
+        LOG.info(
+            "Search index update without propagation - entity: {}, type: {}, update: {}ms",
+            entityId,
+            entityType,
+            updateTime);
+      }
+
+      // Record search index metrics
+      Tags tags = Tags.of("entity_type", entityType, "operation", "update");
+      Metrics.timer("search.index.update", tags)
+          .record(updateTime, java.util.concurrent.TimeUnit.MILLISECONDS);
+
+      if (propagateTime > 0) {
+        Metrics.timer("search.index.propagate", tags)
+            .record(propagateTime, java.util.concurrent.TimeUnit.MILLISECONDS);
+        Metrics.counter("search.index.propagation.executed", tags).increment();
+      } else {
+        Metrics.counter("search.index.propagation.skipped", tags).increment();
+      }
+    } catch (Exception ie) {
+      LOG.error(
+          "Issue in Updating the search document for entity [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
+          entityId,
+          entityType,
+          ie.getMessage(),
+          ie.getCause(),
+          ExceptionUtils.getStackTrace(ie));
+    } finally {
+      // End search timing
+      if (searchSample != null) {
+        RequestLatencyContext.endSearchOperation(searchSample);
       }
     }
   }
@@ -467,7 +645,129 @@ public class SearchRepository {
     EntityInterface entity =
         entityRepository.get(null, entityReference.getId(), entityRepository.getFields("*"));
     // Update Entity
-    updateEntity(entity);
+    updateEntityIndex(entity);
+  }
+
+  /**
+   * Bulk updates domain references for assets when a data product's domain changes. This is more
+   * efficient than updating each entity individually as it uses a single update-by-query operation.
+   *
+   * @param dataProductFqn the fully qualified name of the data product
+   * @param oldDomainFqns list of old domain FQNs to remove from assets
+   * @param newDomains list of new domain references to add to assets
+   */
+  public void updateAssetDomainsForDataProduct(
+      String dataProductFqn, List<String> oldDomainFqns, List<EntityReference> newDomains) {
+    getSearchClient().updateAssetDomainsForDataProduct(dataProductFqn, oldDomainFqns, newDomains);
+  }
+
+  /**
+   * Bulk updates domain references for specific assets by their IDs.
+   */
+  public void updateAssetDomainsByIds(
+      List<UUID> assetIds, List<String> oldDomainFqns, List<EntityReference> newDomains) {
+    getSearchClient().updateAssetDomainsByIds(assetIds, oldDomainFqns, newDomains);
+  }
+
+  public boolean checkIfIndexingIsSupported(String entityType) {
+    IndexMapping indexMapping = entityIndexMap.get(entityType);
+    if (indexMapping == null) {
+      LOG.debug("Index mapping is not supported for entity type: {}", entityType);
+      return false;
+    }
+    return true;
+  }
+
+  /**
+   * Determines if changes require propagation to child entities.
+   * Only propagate when fields that actually affect children have been modified.
+   */
+  private boolean requiresPropagation(
+      ChangeDescription changeDescription, String entityType, EntityInterface entity) {
+    if (changeDescription == null) {
+      return false;
+    }
+
+    // Check if any inheritable fields have changed (owners, domains, etc.)
+    boolean hasInheritableChanges =
+        changeDescription.getFieldsAdded().stream()
+                .anyMatch(field -> inheritableFields.contains(field.getName()))
+            || changeDescription.getFieldsUpdated().stream()
+                .anyMatch(field -> inheritableFields.contains(field.getName()))
+            || changeDescription.getFieldsDeleted().stream()
+                .anyMatch(field -> inheritableFields.contains(field.getName()));
+
+    // Tags need special handling - they only propagate in specific scenarios:
+    // 1. From glossary terms to entities
+    // 2. When a tag entity itself is updated (to all entities using it)
+    // 3. NOT from table to columns
+    boolean hasTagChanges = false;
+    boolean nameChanged =
+        changeDescription.getFieldsUpdated().stream()
+            .anyMatch(field -> field.getName().equals(FIELD_NAME));
+    if (entityType.equalsIgnoreCase(Entity.GLOSSARY_TERM)
+        || entityType.equalsIgnoreCase(Entity.TAG)) {
+      hasTagChanges =
+          changeDescription.getFieldsAdded().stream()
+                  .anyMatch(field -> propagateFields.contains(field.getName()))
+              || changeDescription.getFieldsUpdated().stream()
+                  .anyMatch(field -> propagateFields.contains(field.getName()))
+              || changeDescription.getFieldsDeleted().stream()
+                  .anyMatch(field -> propagateFields.contains(field.getName()));
+    }
+
+    // Check for glossary term specific changes
+    if (entityType.equalsIgnoreCase(Entity.GLOSSARY_TERM)) {
+      hasInheritableChanges =
+          hasInheritableChanges
+              || hasTagChanges
+              || nameChanged
+              || changeDescription.getFieldsAdded().stream()
+                  .anyMatch(field -> field.getName().equals(Entity.FIELD_TAGS))
+              || changeDescription.getFieldsDeleted().stream()
+                  .anyMatch(field -> field.getName().equals(Entity.FIELD_TAGS));
+    }
+
+    // Check for certification tag changes + tag specific changes
+    if (entityType.equalsIgnoreCase(Entity.TAG)) {
+      Tag tag = (Tag) entity;
+      hasInheritableChanges = hasInheritableChanges || nameChanged;
+      if (tag != null && tag.getCertification() != null) {
+        hasInheritableChanges =
+            hasInheritableChanges
+                || changeDescription.getFieldsUpdated().stream()
+                    .anyMatch(field -> field.getName().equals("certification"));
+      }
+    }
+
+    // Check for relationship changes that need propagation
+    if (changeDescription.getFieldsAdded().stream()
+            .anyMatch(field -> field.getName().equals("upstreamEntityRelationship"))
+        || changeDescription.getFieldsUpdated().stream()
+            .anyMatch(field -> field.getName().equals("upstreamEntityRelationship"))) {
+      hasInheritableChanges = true;
+    }
+
+    // Page entities have special FQN propagation when parent changes
+    if (entityType.equalsIgnoreCase(Entity.PAGE)) {
+      boolean parentChanged =
+          changeDescription.getFieldsAdded().stream()
+                  .anyMatch(field -> field.getName().contains("parent"))
+              || changeDescription.getFieldsUpdated().stream()
+                  .anyMatch(field -> field.getName().contains("parent"));
+      hasInheritableChanges = hasInheritableChanges || parentChanged;
+    }
+
+    boolean propagationRequired = hasInheritableChanges || hasTagChanges;
+
+    if (propagationRequired) {
+      LOG.debug(
+          "Propagation required for entity {} of type {} - changes detected in inheritable fields or special propagation needed",
+          entity.getId(),
+          entityType);
+    }
+
+    return propagationRequired;
   }
 
   public void propagateInheritedFieldsToChildren(
@@ -475,34 +775,58 @@ public class SearchRepository {
       String entityId,
       ChangeDescription changeDescription,
       IndexMapping indexMapping,
-      EntityInterface entity) {
-    if (changeDescription != null) {
-      Pair<String, Map<String, Object>> updates =
-          getInheritedFieldChanges(changeDescription, entity);
-      Pair<String, String> parentMatch;
-      if (!updates.getValue().isEmpty()
-          && (updates.getValue().containsKey(FIELD_DOMAIN)
-              || updates.getValue().containsKey(FIELD_DISPLAY_NAME))) {
-        if (entityType.equalsIgnoreCase(Entity.DATABASE_SERVICE)
-            || entityType.equalsIgnoreCase(Entity.DASHBOARD_SERVICE)
-            || entityType.equalsIgnoreCase(Entity.MESSAGING_SERVICE)
-            || entityType.equalsIgnoreCase(Entity.PIPELINE_SERVICE)
-            || entityType.equalsIgnoreCase(Entity.MLMODEL_SERVICE)
-            || entityType.equalsIgnoreCase(Entity.STORAGE_SERVICE)
-            || entityType.equalsIgnoreCase(Entity.SEARCH_SERVICE)
-            || entityType.equalsIgnoreCase(Entity.API_SERVICE)) {
-          parentMatch = new ImmutablePair<>(SERVICE_ID, entityId);
-        } else {
-          parentMatch = new ImmutablePair<>(entityType + ".id", entityId);
-        }
-      } else {
-        parentMatch = new ImmutablePair<>(entityType + ".id", entityId);
-      }
-      List<String> childAliases = indexMapping.getChildAliases(clusterAlias);
-      if (updates.getKey() != null && !updates.getKey().isEmpty() && !nullOrEmpty(childAliases)) {
-        searchClient.updateChildren(childAliases, parentMatch, updates);
+      EntityInterface entity)
+      throws IOException {
+    if (changeDescription == null) {
+      return;
+    }
+
+    Pair<String, Map<String, Object>> updates = getInheritedFieldChanges(changeDescription, entity);
+    if (updates.getKey() == null || updates.getKey().isEmpty()) {
+      return;
+    }
+
+    List<String> childAliases = indexMapping.getChildAliases(clusterAlias);
+    if (nullOrEmpty(childAliases)) {
+      return;
+    }
+
+    // Domain has subdomains (parent.id) and data products (domains.id) - handle separately
+    if (entityType.equalsIgnoreCase(Entity.DOMAIN)) {
+      propagateToDomainChildren(entityId, indexMapping, updates);
+      return;
+    }
+
+    // Other entities: resolve parent field name and propagate to children
+    String parentFieldName = resolveParentFieldName(entityType, updates);
+    Pair<String, String> parentMatch = new ImmutablePair<>(parentFieldName, entityId);
+    searchClient.updateChildren(childAliases, parentMatch, updates);
+  }
+
+  private String resolveParentFieldName(
+      String entityType, Pair<String, Map<String, Object>> updates) {
+    if (!updates.getValue().isEmpty()
+        && (updates.getValue().keySet().stream()
+                .anyMatch(key -> key.toLowerCase().contains(FIELD_DOMAINS))
+            || updates.getValue().containsKey(FIELD_DISPLAY_NAME))) {
+      if (SERVICE_ENTITY_SET.stream().anyMatch(s -> s.equalsIgnoreCase(entityType))) {
+        return SERVICE_ID;
       }
     }
+    return entityType + ".id";
+  }
+
+  private void propagateToDomainChildren(
+      String domainId, IndexMapping indexMapping, Pair<String, Map<String, Object>> updates)
+      throws IOException {
+    searchClient.updateChildren(
+        List.of(indexMapping.getIndexName(clusterAlias)),
+        new ImmutablePair<>(PARENT_ID, domainId),
+        updates);
+    searchClient.updateChildren(
+        List.of(entityIndexMap.get(Entity.DATA_PRODUCT).getIndexName(clusterAlias)),
+        new ImmutablePair<>(DOMAINS_ID, domainId),
+        updates);
   }
 
   public void propagateGlossaryTags(
@@ -717,6 +1041,21 @@ public class SearchRepository {
               fieldData.put("deletedOwners", inheritedOwners);
               scriptTxt.append(REMOVE_OWNERS_SCRIPT);
               scriptTxt.append(" ");
+            } else if (field.getName().equals(FIELD_DOMAINS)) {
+              List<EntityReference> inheritedDomains =
+                  JsonUtils.deepCopyList(entity.getDomains(), EntityReference.class);
+              for (EntityReference inheritedDomain : inheritedDomains) {
+                inheritedDomain.setInherited(true);
+              }
+              fieldData.put("deletedDomains", inheritedDomains);
+              scriptTxt.append(REMOVE_DOMAINS_SCRIPT);
+              scriptTxt.append(" ");
+            } else if (field.getName().equals(FIELD_FOLLOWERS)) {
+              List<EntityReference> inheritedFollowers =
+                  copyWithInheritedFlag(entity.getFollowers());
+              fieldData.put("deletedFollowers", inheritedFollowers);
+              scriptTxt.append(REMOVE_FOLLOWERS_SCRIPT);
+              scriptTxt.append(" ");
             } else {
               EntityReference entityReference =
                   JsonUtils.readValue(field.getOldValue().toString(), EntityReference.class);
@@ -729,7 +1068,7 @@ public class SearchRepository {
               fieldData.put(field.getName(), JsonUtils.getMap(entityReference));
               scriptTxt.append(" ");
             }
-          } catch (UnhandledServerException e) {
+          } catch (JsonParsingException e) {
             scriptTxt.append(String.format(REMOVE_PROPAGATED_FIELD_SCRIPT, field.getName()));
           }
         }
@@ -751,7 +1090,7 @@ public class SearchRepository {
                     field.getName(),
                     field.getName()));
             fieldData.put(field.getName(), newEntityReference);
-          } catch (UnhandledServerException e) {
+          } catch (JsonParsingException e) {
             if (field.getName().equals(Entity.FIELD_TEST_SUITES)) {
               scriptTxt.append(PROPAGATE_TEST_SUITES_SCRIPT);
               fieldData.put(Entity.FIELD_TEST_SUITES, field.getNewValue());
@@ -780,6 +1119,19 @@ public class SearchRepository {
               }
               fieldData.put("updatedOwners", inheritedOwners);
               scriptTxt.append(ADD_OWNERS_SCRIPT);
+            } else if (field.getName().equals(FIELD_DOMAINS)) {
+              List<EntityReference> inheritedDomains =
+                  JsonUtils.deepCopyList(entity.getDomains(), EntityReference.class);
+              for (EntityReference inheritedDomain : inheritedDomains) {
+                inheritedDomain.setInherited(true);
+              }
+              fieldData.put("updatedDomains", inheritedDomains);
+              scriptTxt.append(ADD_DOMAINS_SCRIPT);
+            } else if (field.getName().equals(FIELD_FOLLOWERS)) {
+              List<EntityReference> inheritedFollowers =
+                  copyWithInheritedFlag(entity.getFollowers());
+              fieldData.put("updatedFollowers", inheritedFollowers);
+              scriptTxt.append(ADD_FOLLOWERS_SCRIPT);
             } else {
               EntityReference entityReference =
                   JsonUtils.readValue(field.getNewValue().toString(), EntityReference.class);
@@ -794,7 +1146,7 @@ public class SearchRepository {
               fieldData.put(field.getName(), entityReference);
             }
             scriptTxt.append(" ");
-          } catch (UnhandledServerException e) {
+          } catch (JsonParsingException e) {
             if (field.getName().equals(FIELD_DISPLAY_NAME)) {
               String fieldPath =
                   getFieldPath(entity.getEntityReference().getType(), field.getName());
@@ -821,7 +1173,9 @@ public class SearchRepository {
         || entityType.equalsIgnoreCase(Entity.MLMODEL_SERVICE)
         || entityType.equalsIgnoreCase(Entity.STORAGE_SERVICE)
         || entityType.equalsIgnoreCase(Entity.SEARCH_SERVICE)
-        || entityType.equalsIgnoreCase(Entity.API_SERVICE)) {
+        || entityType.equalsIgnoreCase(Entity.SECURITY_SERVICE)
+        || entityType.equalsIgnoreCase(Entity.API_SERVICE)
+        || entityType.equalsIgnoreCase(Entity.DRIVE_SERVICE)) {
       return "service." + fieldName;
     } else {
       return entityType + "." + fieldName;
@@ -842,23 +1196,36 @@ public class SearchRepository {
     }
   }
 
-  public void deleteEntity(EntityInterface entity) {
-    if (entity != null) {
-      String entityId = entity.getId().toString();
-      String entityType = entity.getEntityReference().getType();
-      IndexMapping indexMapping = entityIndexMap.get(entityType);
-      try {
-        searchClient.deleteEntity(indexMapping.getIndexName(clusterAlias), entityId);
-        deleteOrUpdateChildren(entity, indexMapping);
-      } catch (Exception ie) {
-        LOG.error(
-            "Issue in Deleting the search document for entityID [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
-            entityId,
-            entityType,
-            ie.getMessage(),
-            ie.getCause(),
-            ExceptionUtils.getStackTrace(ie));
-      }
+  /**
+   * Delete search index for an entity only (no lifecycle events).
+   * This method is used by SearchIndexHandler.
+   */
+  public void deleteEntityIndex(EntityInterface entity) {
+    if (entity == null) {
+      LOG.debug("Entity or EntityReference is null, cannot perform delete.");
+      return;
+    }
+
+    if (!checkIfIndexingIsSupported(entity.getEntityReference().getType())) {
+      LOG.debug(
+          "Indexing is not supported for entity type: {}", entity.getEntityReference().getType());
+      return;
+    }
+
+    String entityId = entity.getId().toString();
+    String entityType = entity.getEntityReference().getType();
+    IndexMapping indexMapping = entityIndexMap.get(entityType);
+    try {
+      searchClient.deleteEntity(indexMapping.getIndexName(clusterAlias), entityId);
+      deleteOrUpdateChildren(entity, indexMapping);
+    } catch (Exception ie) {
+      LOG.error(
+          "Issue in Deleting the search document for entityID [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
+          entityId,
+          entityType,
+          ie.getMessage(),
+          ie.getCause(),
+          ExceptionUtils.getStackTrace(ie));
     }
   }
 
@@ -900,29 +1267,43 @@ public class SearchRepository {
     }
   }
 
-  public void softDeleteOrRestoreEntity(EntityInterface entity, boolean delete) {
-    if (entity != null) {
-      String entityId = entity.getId().toString();
-      String entityType = entity.getEntityReference().getType();
-      IndexMapping indexMapping = entityIndexMap.get(entityType);
-      String scriptTxt = String.format(SOFT_DELETE_RESTORE_SCRIPT, delete);
-      try {
-        searchClient.softDeleteOrRestoreEntity(
-            indexMapping.getIndexName(clusterAlias), entityId, scriptTxt);
-        softDeleteOrRestoredChildren(entity.getEntityReference(), indexMapping, delete);
-      } catch (Exception ie) {
-        LOG.error(
-            "Issue in Soft Deleting the search document for entityID [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
-            entityId,
-            entityType,
-            ie.getMessage(),
-            ie.getCause(),
-            ExceptionUtils.getStackTrace(ie));
-      }
+  /**
+   * Soft delete or restore search index for an entity only (no lifecycle events).
+   * This method is used by SearchIndexHandler.
+   */
+  public void softDeleteOrRestoreEntityIndex(EntityInterface entity, boolean delete) {
+    if (entity == null) {
+      LOG.debug("Entity or EntityReference is null, cannot perform soft delete or restore.");
+      return;
+    }
+
+    if (!checkIfIndexingIsSupported(entity.getEntityReference().getType())) {
+      LOG.debug(
+          "Indexing is not supported for entity type: {}", entity.getEntityReference().getType());
+      return;
+    }
+
+    String entityId = entity.getId().toString();
+    String entityType = entity.getEntityReference().getType();
+    IndexMapping indexMapping = entityIndexMap.get(entityType);
+    String scriptTxt = String.format(SOFT_DELETE_RESTORE_SCRIPT, delete);
+    try {
+      searchClient.softDeleteOrRestoreEntity(
+          indexMapping.getIndexName(clusterAlias), entityId, scriptTxt);
+      softDeleteOrRestoredChildren(entity.getEntityReference(), indexMapping, delete);
+    } catch (Exception ie) {
+      LOG.error(
+          "Issue in Soft Deleting the search document for entityID [{}] and entityType [{}]. Reason[{}], Cause[{}], Stack [{}]",
+          entityId,
+          entityType,
+          ie.getMessage(),
+          ie.getCause(),
+          ExceptionUtils.getStackTrace(ie));
     }
   }
 
-  public void deleteOrUpdateChildren(EntityInterface entity, IndexMapping indexMapping) {
+  public void deleteOrUpdateChildren(EntityInterface entity, IndexMapping indexMapping)
+      throws IOException {
     String docId = entity.getId().toString();
     String entityType = entity.getEntityReference().getType();
     switch (entityType) {
@@ -950,16 +1331,6 @@ public class SearchRepository {
           new ImmutablePair<>(
               REMOVE_TAGS_CHILDREN_SCRIPT,
               Collections.singletonMap("fqn", entity.getFullyQualifiedName())));
-      case Entity.DASHBOARD -> {
-        String scriptTxt =
-            String.format(
-                "if (ctx._source.dashboards.size() == 1) { ctx._source.put('deleted', '%s') }",
-                true);
-        searchClient.softDeleteOrRestoreChildren(
-            indexMapping.getChildAliases(clusterAlias),
-            scriptTxt,
-            List.of(new ImmutablePair<>("dashboards.id", docId)));
-      }
       case Entity.TEST_SUITE -> {
         TestSuite testSuite = (TestSuite) entity;
         if (Boolean.TRUE.equals(testSuite.getBasic())) {
@@ -970,7 +1341,9 @@ public class SearchRepository {
           searchClient.updateChildren(
               indexMapping.getChildAliases(clusterAlias),
               new ImmutablePair<>("testSuites.id", testSuite.getId().toString()),
-              new ImmutablePair<>(REMOVE_TEST_SUITE_CHILDREN_SCRIPT, null));
+              new ImmutablePair<>(
+                  REMOVE_TEST_SUITE_CHILDREN_SCRIPT,
+                  Collections.singletonMap("suiteId", testSuite.getId().toString())));
         }
       }
       case Entity.DASHBOARD_SERVICE,
@@ -979,7 +1352,9 @@ public class SearchRepository {
           Entity.PIPELINE_SERVICE,
           Entity.MLMODEL_SERVICE,
           Entity.STORAGE_SERVICE,
-          Entity.SEARCH_SERVICE -> searchClient.deleteEntityByFields(
+          Entity.SEARCH_SERVICE,
+          Entity.SECURITY_SERVICE,
+          Entity.DRIVE_SERVICE -> searchClient.deleteEntityByFields(
           indexMapping.getChildAliases(clusterAlias),
           List.of(new ImmutablePair<>("service.id", docId)));
       default -> {
@@ -993,7 +1368,8 @@ public class SearchRepository {
   }
 
   public void softDeleteOrRestoredChildren(
-      EntityReference entityReference, IndexMapping indexMapping, boolean delete) {
+      EntityReference entityReference, IndexMapping indexMapping, boolean delete)
+      throws IOException {
     String docId = entityReference.getId().toString();
     String entityType = entityReference.getType();
     String scriptTxt = String.format(SOFT_DELETE_RESTORE_SCRIPT, delete);
@@ -1004,20 +1380,12 @@ public class SearchRepository {
           Entity.PIPELINE_SERVICE,
           Entity.MLMODEL_SERVICE,
           Entity.STORAGE_SERVICE,
-          Entity.SEARCH_SERVICE -> searchClient.softDeleteOrRestoreChildren(
+          Entity.SEARCH_SERVICE,
+          Entity.SECURITY_SERVICE,
+          Entity.DRIVE_SERVICE -> searchClient.softDeleteOrRestoreChildren(
           indexMapping.getChildAliases(clusterAlias),
           scriptTxt,
           List.of(new ImmutablePair<>("service.id", docId)));
-      case Entity.DASHBOARD -> {
-        scriptTxt =
-            String.format(
-                "if (ctx._source.dashboards.size() == 1) { ctx._source.put('deleted', '%s') }",
-                delete);
-        searchClient.softDeleteOrRestoreChildren(
-            indexMapping.getChildAliases(clusterAlias),
-            scriptTxt,
-            List.of(new ImmutablePair<>("dashboards.id", docId)));
-      }
       default -> {
         List<String> indexNames = indexMapping.getChildAliases(clusterAlias);
         if (!indexNames.isEmpty()) {
@@ -1113,6 +1481,11 @@ public class SearchRepository {
     return searchClient.searchWithNLQ(request, subjectContext);
   }
 
+  public Response searchWithDirectQuery(SearchRequest request, SubjectContext subjectContext)
+      throws IOException {
+    return searchClient.searchWithDirectQuery(request, subjectContext);
+  }
+
   public Response getDocument(String indexName, UUID entityId) throws IOException {
     return searchClient.getDocByID(indexName, entityId.toString());
   }
@@ -1146,6 +1519,28 @@ public class SearchRepository {
         searchSortFilter,
         q,
         queryString);
+  }
+
+  public SearchResultListMapper listWithOffset(
+      SearchListFilter filter,
+      int limit,
+      int offset,
+      String entityType,
+      SearchSortFilter searchSortFilter,
+      String q,
+      String queryString,
+      SubjectContext subjectContext)
+      throws IOException {
+    IndexMapping index = entityIndexMap.get(entityType);
+    return searchClient.listWithOffset(
+        filter.getCondition(entityType),
+        limit,
+        offset,
+        index.getIndexName(clusterAlias),
+        searchSortFilter,
+        q,
+        queryString,
+        subjectContext);
   }
 
   public SearchResultListMapper listWithDeepPagination(
@@ -1184,6 +1579,23 @@ public class SearchRepository {
   public SearchLineageResult searchLineageWithDirection(SearchLineageRequest lineageRequest)
       throws IOException {
     return searchClient.searchLineageWithDirection(lineageRequest);
+  }
+
+  public LineagePaginationInfo getLineagePaginationInfo(
+      String fqn,
+      int upstreamDepth,
+      int downstreamDepth,
+      String queryFilter,
+      boolean includeDeleted,
+      String entityType)
+      throws IOException {
+    return searchClient.getLineagePaginationInfo(
+        fqn, upstreamDepth, downstreamDepth, queryFilter, includeDeleted, entityType);
+  }
+
+  public SearchLineageResult searchLineageByEntityCount(EntityCountLineageRequest request)
+      throws IOException {
+    return searchClient.searchLineageByEntityCount(request);
   }
 
   public Response searchEntityRelationship(
@@ -1232,6 +1644,10 @@ public class SearchRepository {
     return searchClient.aggregate(request);
   }
 
+  public Response getEntityTypeCounts(SearchRequest request, String index) throws IOException {
+    return searchClient.getEntityTypeCounts(request, index);
+  }
+
   public JsonObject aggregate(
       String query, String entityType, SearchAggregation searchAggregation, SearchListFilter filter)
       throws IOException {
@@ -1242,6 +1658,15 @@ public class SearchRepository {
   public DataQualityReport genericAggregation(
       String query, String index, SearchAggregation aggregationMetadata) throws IOException {
     return searchClient.genericAggregation(query, index, aggregationMetadata);
+  }
+
+  public DataQualityReport genericAggregation(
+      String query,
+      String index,
+      SearchAggregation aggregationMetadata,
+      SubjectContext subjectContext)
+      throws IOException {
+    return searchClient.genericAggregation(query, index, aggregationMetadata, subjectContext);
   }
 
   public Response listDataInsightChartResult(
@@ -1319,8 +1744,9 @@ public class SearchRepository {
     String relationDocId = fromTableId.toString() + "-" + toTableId.toString();
     searchClient.updateChildren(
         GLOBAL_SEARCH_ALIAS,
-        new ImmutablePair<>("entityRelationship.docId.keyword", relationDocId),
-        new ImmutablePair<>(String.format(REMOVE_ENTITY_RELATIONSHIP, relationDocId), null));
+        new ImmutablePair<>("upstreamEntityRelationship.docId.keyword", relationDocId),
+        new ImmutablePair<>(
+            REMOVE_ENTITY_RELATIONSHIP, Collections.singletonMap("docId", relationDocId)));
   }
 
   public QueryCostSearchResult getQueryCostRecords(String serviceName) throws IOException {
@@ -1339,5 +1765,76 @@ public class SearchRepository {
     } catch (Exception e) {
       LOG.error("Failed to initialize NLQ service", e);
     }
+  }
+
+  /**
+   * Creates a BulkSink instance with vector embedding configuration.
+   * This method can be overridden in subclasses to provide different implementations.
+   */
+  public BulkSink createBulkSink(
+      int batchSize, int maxConcurrentRequests, long maxPayloadSizeBytes) {
+    ElasticSearchConfiguration.SearchType searchType = getSearchType();
+    if (searchType.equals(ElasticSearchConfiguration.SearchType.OPENSEARCH)) {
+      return new OpenSearchBulkSink(this, batchSize, maxConcurrentRequests, maxPayloadSizeBytes);
+    } else {
+      return new ElasticSearchBulkSink(this, batchSize, maxConcurrentRequests, maxPayloadSizeBytes);
+    }
+  }
+
+  /**
+   * Creates a ReindexHandler instance for recreate operations during reindexing.
+   * This method can be overridden in subclasses to provide different implementations.
+   */
+  public RecreateIndexHandler createReindexHandler() {
+    return new DefaultRecreateHandler();
+  }
+
+  /**
+   * Checks if vector embedding is enabled.
+   * This method can be overridden in subclasses to provide different configurations.
+   */
+  @SuppressWarnings("unused")
+  public boolean isVectorEmbeddingEnabled() {
+    return false;
+  }
+
+  @SuppressWarnings("unused")
+  public <T> T getHighLevelClient() {
+    return (T) searchClient.getHighLevelClient();
+  }
+
+  public SearchEntityRelationshipResult searchEntityRelationshipWithDirection(
+      SearchEntityRelationshipRequest entityRelationshipRequest) throws IOException {
+    return searchClient.searchEntityRelationshipWithDirection(entityRelationshipRequest);
+  }
+
+  public SearchEntityRelationshipResult searchEntityRelationship(
+      SearchEntityRelationshipRequest entityRelationshipRequest) throws IOException {
+    return searchClient.searchEntityRelationship(entityRelationshipRequest);
+  }
+
+  public org.openmetadata.schema.api.entityRelationship.SearchSchemaEntityRelationshipResult
+      getSchemaEntityRelationship(
+          String schemaFqn,
+          String queryFilter,
+          String includeSourceFields,
+          int offset,
+          int limit,
+          int from,
+          int size,
+          boolean deleted)
+          throws IOException {
+    return searchClient.getSchemaEntityRelationship(
+        schemaFqn, queryFilter, includeSourceFields, offset, limit, from, size, deleted);
+  }
+
+  private static List<EntityReference> copyWithInheritedFlag(List<EntityReference> references) {
+    if (references == null || references.isEmpty()) {
+      return new ArrayList<>();
+    }
+    List<EntityReference> inheritedReferences =
+        JsonUtils.deepCopyList(references, EntityReference.class);
+    inheritedReferences.forEach(ref -> ref.setInherited(true));
+    return inheritedReferences;
   }
 }
