@@ -33,15 +33,17 @@ import com.auth0.jwt.interfaces.Claim;
 import com.auth0.jwt.interfaces.DecodedJWT;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.collect.ImmutableList;
+import jakarta.annotation.Priority;
+import jakarta.ws.rs.Priorities;
 import jakarta.ws.rs.container.ContainerRequestContext;
 import jakarta.ws.rs.container.ContainerRequestFilter;
 import jakarta.ws.rs.core.MultivaluedMap;
 import jakarta.ws.rs.core.SecurityContext;
 import jakarta.ws.rs.core.UriInfo;
 import jakarta.ws.rs.ext.Provider;
+import java.net.URI;
 import java.net.URL;
 import java.security.interfaces.RSAPublicKey;
-import java.util.Arrays;
 import java.util.Calendar;
 import java.util.HashSet;
 import java.util.List;
@@ -53,7 +55,7 @@ import java.util.stream.Collectors;
 import lombok.Getter;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.openmetadata.schema.api.security.AuthenticationConfiguration;
 import org.openmetadata.schema.api.security.AuthorizerConfiguration;
 import org.openmetadata.schema.auth.LogoutRequest;
@@ -66,12 +68,14 @@ import org.openmetadata.service.security.saml.JwtTokenCacheManager;
 
 @Slf4j
 @Provider
+@Priority(Priorities.AUTHENTICATION)
 public class JwtFilter implements ContainerRequestFilter {
   public static final String EMAIL_CLAIM_KEY = "email";
   public static final String USERNAME_CLAIM_KEY = "username";
   public static final String AUTHORIZATION_HEADER = "Authorization";
   public static final String TOKEN_PREFIX = "Bearer";
   public static final String BOT_CLAIM = "isBot";
+  public static final String IMPERSONATED_USER_CLAIM = "impersonatedUser";
   @Getter private List<String> jwtPrincipalClaims;
   @Getter private Map<String, String> jwtPrincipalClaimsMapping;
   private JwkProvider jwkProvider;
@@ -82,16 +86,14 @@ public class JwtFilter implements ContainerRequestFilter {
   private boolean useRolesFromProvider = false;
   private AuthenticationConfiguration.TokenValidationAlgorithm tokenValidationAlgorithm;
 
-  private static final List<String> DEFAULT_PUBLIC_KEY_URLS =
-      Arrays.asList(
-          "http://localhost:8585/api/v1/system/config/jwks",
-          "http://host.docker.internal:8585/api/v1/system/config/jwks");
   public static final List<String> EXCLUDED_ENDPOINTS =
       List.of(
           "v1/system/config/jwks",
           "v1/system/config/authorizer",
           "v1/system/config/customUiThemePreference",
           "v1/system/config/auth",
+          "v1/system/config/rdf",
+          "v1/system/health",
           "v1/users/signup",
           "v1/system/version",
           "v1/users/registrationConfirmation",
@@ -120,16 +122,10 @@ public class JwtFilter implements ContainerRequestFilter {
 
     ImmutableList.Builder<URL> publicKeyUrlsBuilder = ImmutableList.builder();
     for (String publicKeyUrlStr : authenticationConfiguration.getPublicKeyUrls()) {
-      publicKeyUrlsBuilder.add(new URL(publicKeyUrlStr));
+      publicKeyUrlsBuilder.add(URI.create(publicKeyUrlStr).toURL());
     }
-    // avoid users misconfiguration and add default publicKeyUrls
-    for (String publicKeyUrl : DEFAULT_PUBLIC_KEY_URLS) {
-      if (!authenticationConfiguration.getPublicKeyUrls().contains(publicKeyUrl)) {
-        publicKeyUrlsBuilder.add(new URL(publicKeyUrl));
-      }
-    }
-
     this.jwkProvider = new MultiUrlJwkProvider(publicKeyUrlsBuilder.build());
+
     this.principalDomain = authorizerConfiguration.getPrincipalDomain();
     this.allowedDomains = authorizerConfiguration.getAllowedDomains();
     this.enforcePrincipalDomain = authorizerConfiguration.getEnforcePrincipalDomain();
@@ -147,6 +143,7 @@ public class JwtFilter implements ContainerRequestFilter {
     this.jwtPrincipalClaims = jwtPrincipalClaims;
     this.principalDomain = principalDomain;
     this.enforcePrincipalDomain = enforcePrincipalDomain;
+    this.tokenValidationAlgorithm = AuthenticationConfiguration.TokenValidationAlgorithm.RS_256;
   }
 
   @SneakyThrows
@@ -166,12 +163,26 @@ public class JwtFilter implements ContainerRequestFilter {
     String userName = findUserNameFromClaims(jwtPrincipalClaimsMapping, jwtPrincipalClaims, claims);
     String email =
         findEmailFromClaims(jwtPrincipalClaimsMapping, jwtPrincipalClaims, claims, principalDomain);
+    boolean isBotUser = isBot(claims);
 
-    // Check Validations
-    checkValidationsForToken(claims, tokenFromHeader, userName);
+    // Check for impersonation header - authorization will be checked later
+    String impersonateUser = requestContext.getHeaderString("X-Impersonate-User");
+    String impersonatedBy = null;
 
-    // Setting Security Context
-    // Setting Security Context
+    if (impersonateUser != null && !impersonateUser.isEmpty()) {
+      // Only bots can impersonate
+      if (!isBotUser) {
+        throw new AuthorizationException("Only bot users can impersonate other users");
+      }
+
+      // Set impersonatedBy to the bot's name
+      impersonatedBy = userName;
+      // Switch userName to the target user for SecurityContext
+      userName = impersonateUser;
+    }
+
+    checkValidationsForToken(claims, tokenFromHeader, userName, impersonatedBy);
+
     CatalogPrincipal catalogPrincipal = new CatalogPrincipal(userName, email);
     String scheme = requestContext.getUriInfo().getRequestUri().getScheme();
     CatalogSecurityContext catalogSecurityContext =
@@ -179,13 +190,22 @@ public class JwtFilter implements ContainerRequestFilter {
             catalogPrincipal,
             scheme,
             SecurityContext.DIGEST_AUTH,
-            getUserRolesFromClaims(claims, isBot(claims)));
+            getUserRolesFromClaims(claims, isBotUser),
+            isBotUser,
+            impersonatedBy);
     LOG.debug("SecurityContext {}", catalogSecurityContext);
     requestContext.setSecurityContext(catalogSecurityContext);
+
+    // Set impersonatedBy in thread-local context
+    if (impersonatedBy != null) {
+      ImpersonationContext.setImpersonatedBy(impersonatedBy);
+    } else {
+      ImpersonationContext.clear();
+    }
   }
 
   public void checkValidationsForToken(
-      Map<String, Claim> claims, String tokenFromHeader, String userName) {
+      Map<String, Claim> claims, String tokenFromHeader, String userName, String impersonatedBy) {
     // the case where OMD generated the Token for the Client in case OM generated Token
     validateTokenIsNotUsedAfterLogout(tokenFromHeader);
 
@@ -199,7 +219,9 @@ public class JwtFilter implements ContainerRequestFilter {
         enforcePrincipalDomain);
 
     // Validate Bot token matches what was created in OM
-    if (isBot(claims)) {
+    // Skip validation for impersonation tokens - they are generated dynamically and not stored in
+    // cache
+    if (impersonatedBy == null && isBot(claims)) {
       validateBotToken(tokenFromHeader, userName);
     }
 
@@ -256,24 +278,23 @@ public class JwtFilter implements ContainerRequestFilter {
   protected static String extractToken(MultivaluedMap<String, String> headers) {
     LOG.debug("Request Headers:{}", headers);
     String source = headers.getFirst(AUTHORIZATION_HEADER);
-    if (nullOrEmpty(source)) {
-      throw AuthenticationException.getTokenNotPresentException();
-    }
-    // Extract the bearer token
-    if (source.startsWith(TOKEN_PREFIX)) {
-      return source.substring(TOKEN_PREFIX.length() + 1);
-    }
-    throw AuthenticationException.getTokenNotPresentException();
+    return extractTokenFromString(source);
   }
 
   public static String extractToken(String tokenFromHeader) {
     LOG.debug("Request Token:{}", tokenFromHeader);
-    if (nullOrEmpty(tokenFromHeader)) {
+    return extractTokenFromString(tokenFromHeader);
+  }
+
+  private static String extractTokenFromString(String tokenString) {
+    if (nullOrEmpty(tokenString)) {
       throw AuthenticationException.getTokenNotPresentException();
     }
-    // Extract the bearer token
-    if (tokenFromHeader.startsWith(TOKEN_PREFIX)) {
-      return tokenFromHeader.substring(TOKEN_PREFIX.length() + 1);
+    if (tokenString.startsWith(TOKEN_PREFIX)) {
+      if (tokenString.length() <= TOKEN_PREFIX.length() + 1) {
+        throw AuthenticationException.getTokenNotPresentException();
+      }
+      return tokenString.substring(TOKEN_PREFIX.length() + 1);
     }
     throw AuthenticationException.getTokenNotPresentException();
   }
@@ -320,10 +341,12 @@ public class JwtFilter implements ContainerRequestFilter {
     String email =
         findEmailFromClaims(jwtPrincipalClaimsMapping, jwtPrincipalClaims, claims, principalDomain);
     CatalogPrincipal catalogPrincipal = new CatalogPrincipal(userName, email);
+    boolean isBotUser = isBot(claims);
     return new CatalogSecurityContext(
         catalogPrincipal,
         "https",
         SecurityContext.DIGEST_AUTH,
-        getUserRolesFromClaims(claims, isBot(claims)));
+        getUserRolesFromClaims(claims, isBotUser),
+        isBotUser);
   }
 }
